# a9-prettyplease

./: Cargo.toml  ENHANCED_HEURISTICS.md  README.md  RUSTFMT_DIVERGENCES.md  build.rs
.github/workflows/: ci.yml  publish.yml
cargo-expand/: anyhow-1.0.58.rs  cargo-tally-1.0.8.rs  cxx-1.0.69.rs  erased-serde-0.3.21.rs  serde-1.0.137.rs  serde_derive-1.0.137.rs  syn-1.0.97.rs
cargo-expand/update/: Cargo.toml
examples/: output.prettyplease.rs  output.spacing.rs
examples/update/: Cargo.toml
fuzz/: Cargo.toml
src/: attr.rs  convenience.rs  data.rs  expr.rs  file.rs  heuristics.rs  item.rs  lib.rs  mac.rs  stmt.rs
tests/: test.rs  test_precedence.rs  test_spacing.rs  test_spacing_full.rs
